packages/webassemblyjs/test/fixtures/conversions/type-errors/trunc_s-i32-f32/module.wast
(module (func (result i32) (i32.trunc_s/f32 (i64.const 0))))
